<resources>
    <string name="app_name">AR World</string>
    <string name="basic_demo">Basic demo</string>
    <string name="custom_object_demo">Custom object demo</string>
    <string name="physics_simulation_demo">Physics simulation demo</string>
    <string name="camera_permission_request_title">Camera permission required</string>
    <string name="camera_permission_request_message">Add camera permission via Settings?</string>
    <string name="install_arcore_message">Please install ARCore</string>
    <string name="update_arcore_message">Please update ARCore</string>
    <string name="update_app_message">Please update this app</string>
    <string name="ar_unsupported_message">This device does not support AR</string>
    <string name="failed_ar_session_creation_message">Failed to create AR session</string>
    <string name="error_message">Error: %1$s</string>

    <!--  Basic demo  -->
    <string name="shape_cube">Cube</string>
    <string name="shape_sphere">Sphere</string>
    <string name="shape_cylinder">Cylinder</string>

    <!--  Custom object demo  -->
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>

    <!--  Physics simulation demo  -->
    <string name="score_text">Score: %1$d/10</string>
    <string name="idle_score">Score: —/—</string>
    <string name="remaining_time_text">Time remaining: %1$d</string>
    <string name="idle_time_text">Time remaining: —</string>
    <string name="create_game">CREATE GAME</string>
    <string name="start_game">START GAME</string>
    <string name="restart_game">RESTART GAME</string>
    <string name="game_over">GAME OVER</string>
</resources>
