<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PhysicsSimulationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.ar.sceneform.ArSceneView
            android:id="@+id/scene_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/holo_green_dark"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/idle_score"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timer_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/holo_green_dark"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/idle_time_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/start_game"
            android:gravity="center"
            android:textColor="@color/teal_500"
            app:layout_constraintStart_toEndOf="@id/throw_button"
            app:layout_constraintTop_toTopOf="@id/throw_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/throw_button"/>

        <Button
            android:id="@+id/create_game_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@string/create_game"
            android:gravity="center"
            android:textColor="@color/teal_500"
            app:layout_constraintTop_toTopOf="@id/throw_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/throw_button"
            app:layout_constraintBottom_toBottomOf="@id/throw_button"/>

        <ImageView
            android:id="@+id/throw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/ball_vector" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
